--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
+body {
+  background-color:#14141B;
+}
+
+.navbar-font {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #2B2428;
   }
   
   .navbar a {
