--- a/styles.css
+++ b/styles.css
@@ -11,22 +11,22 @@ body {
     background-color: #2B2428;
   }
   
-  .navbar a {
+.navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 18px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
   
-  .dropdown {
+.dropdown {
     float: left;
     overflow: hidden;
   }
   
-  .dropdown .dropbtn {
-    font-size: 16px;  
+.dropdown .dropbtn {
+    font-size: 18px;  
     border: none;
     outline: none;
     color: white;
@@ -36,28 +36,122 @@ body {
     margin: 0;
   }
   
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #2B2428;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
-  .dropdown-content a {
+.dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
   }
   
-  .dropdown-content a:hover {
-    background-color: #ddd;
+.dropdown-content a:hover {
+    background-color: #160f11;
   }
   
-  .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
   }
+
+.header {
+  background-color:#3B2634;
+  color:#FFB1D1;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding:15px;
+  border-top-left-radius:15px;
+  border-top-right-radius:15px;
+}
+
+.body-box {
+  background-color:#1D1D27;
+  margin-left:5%;
+  margin-right:5%;
+  border-radius:15px;
+}
+
+.flex-container {
+  display:flex;
+  flex-direction:row;
+}
+
+.v-flex {
+  display:flex;
+  flex-direction:column;
+  padding-bottom:5vw;
+}
+
+.content-box {
+  background-size:100%;
+  border-radius:15px;
+  width:18vw;
+  height:15vw;
+  margin-left:2vw;
+  margin-right:2vw;
+  margin-bottom:1.3vw;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color:white;
+}
+
+.icon {
+  border-radius:100px;
+  width:8vw;
+  height:8vw;
+  margin:0.8vw;
+  margin-right:1.3vw;
+}
+
+.portrait{
+  width:30vw;
+  border-radius:2vw;
+}
+
+.name-header {
+  background-color:#3B2634;
+  color:#FFB1D1;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:7vw;
+  padding:1vw;
+  margin-left:5vw;
+  margin-right:5vw;
+  border-radius:15px;
+  text-align:center;
+  margin-top:0;
+  margin-bottom:0;
+}
+
+.subtitle {
+  color:#FFB1D1;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:2vw;
+  margin-left:5vw;
+  margin-right:5vw;
+  text-align:center;
+}
+
+.body-text {
+  color:white;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:1.2vw;
+  margin-left:5vw;
+  margin-right:5vw;
+  text-align:center;
+}
+
+.quote {
+  color:#fdc7dd;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:1.2vw;
+  margin-left:5vw;
+  margin-right:5vw;
+  text-align:center;
+}
+
