--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,20 @@ body {
   margin-bottom:0;
 }
 
+.sub-header {
+  background-color:#3B2634;
+  color:#FFB1D1;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:2vw;
+  padding:1vw;
+  margin-left:5vw;
+  margin-right:5vw;
+  border-radius:15px;
+  text-align:center;
+  margin-top:0;
+  margin-bottom:0;
+}
+
 .subtitle {
   color:#FFB1D1;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -144,6 +158,23 @@ body {
   margin-left:5vw;
   margin-right:5vw;
   text-align:center;
+}
+
+.block-text{
+  margin-left:10vw;
+  margin-right:10vw;
+  text-align:justify;
+  color:white;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:1.2vw;
+}
+
+.wrap-text{
+  margin-left:4vw;
+  text-align:justify;
+  color:white;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:1.2vw;
 }
 
 .quote {
